# nats-client

./: README.md  bitbucket-pipelines.yml  nats-client.cabal  stack.yaml
bench/: Bench.hs
example/: ExampleClient.hs
src/Network/Nats/: Client.hs  Protocol.hs  Subscription.hs
src/Network/Nats/Protocol/: Message.hs  Types.hs
test/: Spec.hs
test/Network/Nats/Protocol/: Tests.hs
test/Network/Nats/Test/: Generators.hs
