name:                nats-client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jpgneves/nats-client#readme
license:             BSD3
license-file:        LICENSE
author:              João Neves
maintainer:          sevenjp@gmail.com
copyright:           2017 João Neves
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Nats.Client
                     , Network.Nats.Protocol
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , bytestring
                     , data-default
                     , exceptions
                     , network
                     , text
                     , transformers
  default-language:    Haskell2010

executable "nats-client"
  hs-source-dirs:      example
  main-is:             ExampleClient.hs
  build-depends:       base >=4.7 && < 5
                     , data-default
                     , nats-client
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/nats-client
